added code element to checklist assistant

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <script src="assets/js/tabs/classes/builder/elements/CheckBox.js"></script>
     <script src="assets/js/tabs/classes/builder/elements/CodeElement.js"></script>
     <script src="assets/js/tabs/classes/builder/elements/TextArea.js"></script>
+    <script src="assets/js/tabs/classes/builder/elements/Modal.js"></script>
 
     <script src="assets/js/tabs/classes/EncoderDecoder.js"></script>
     <script src="assets/js/tabs/classes/Hashing.js"></script>
@@ -1437,68 +1438,9 @@
                                         <h6>
                                             Windows privilege escalation checklist (general)
                                         </h6>
-
                                         <div id="checklist-assistant-windows-privesc-accordion">
 
                                         </div>
-
-                                        <!--                                        &lt;!&ndash; checklist accordion START &ndash;&gt;-->
-                                        <!--                                        <div class="accordion" id="accordionExample">-->
-                                        <!--                                            <div class="accordion-item">-->
-                                        <!--                                                <h2 class="accordion-header" id="headingOne">-->
-                                        <!--                                                    <button class="accordion-button collapsed" type="button"-->
-                                        <!--                                                            data-bs-toggle="collapse" data-bs-target="#collapseOne"-->
-                                        <!--                                                            aria-expanded="false" aria-controls="collapseOne">-->
-                                        <!--                                                        Accordion Item #1-->
-                                        <!--                                                    </button>-->
-                                        <!--                                                </h2>-->
-                                        <!--                                                <div id="collapseOne" class="accordion-collapse collapse"-->
-                                        <!--                                                     aria-labelledby="headingOne" data-bs-parent="#accordionExample">-->
-                                        <!--                                                    <div class="accordion-body">-->
-                                        <!--                                                        Content for the first accordion item. This is some placeholder-->
-                                        <!--                                                        content for the accordion. You can use this space to describe-->
-                                        <!--                                                        your content.-->
-                                        <!--                                                    </div>-->
-                                        <!--                                                </div>-->
-                                        <!--                                            </div>-->
-                                        <!--                                            <div class="accordion-item">-->
-                                        <!--                                                <h2 class="accordion-header" id="headingTwo">-->
-                                        <!--                                                    <button class="accordion-button collapsed" type="button"-->
-                                        <!--                                                            data-bs-toggle="collapse" data-bs-target="#collapseTwo"-->
-                                        <!--                                                            aria-expanded="false" aria-controls="collapseTwo">-->
-                                        <!--                                                        Accordion Item #2-->
-                                        <!--                                                    </button>-->
-                                        <!--                                                </h2>-->
-                                        <!--                                                <div id="collapseTwo" class="accordion-collapse collapse"-->
-                                        <!--                                                     aria-labelledby="headingTwo" data-bs-parent="#accordionExample">-->
-                                        <!--                                                    <div class="accordion-body">-->
-                                        <!--                                                        Content for the second accordion item. This is another piece of-->
-                                        <!--                                                        placeholder content for the accordion. You can use this space to-->
-                                        <!--                                                        describe your content.-->
-                                        <!--                                                    </div>-->
-                                        <!--                                                </div>-->
-                                        <!--                                            </div>-->
-                                        <!--                                            <div class="accordion-item">-->
-                                        <!--                                                <h2 class="accordion-header" id="headingThree">-->
-                                        <!--                                                    <button class="accordion-button collapsed" type="button"-->
-                                        <!--                                                            data-bs-toggle="collapse" data-bs-target="#collapseThree"-->
-                                        <!--                                                            aria-expanded="false" aria-controls="collapseThree">-->
-                                        <!--                                                        Accordion Item #3-->
-                                        <!--                                                    </button>-->
-                                        <!--                                                </h2>-->
-                                        <!--                                                <div id="collapseThree" class="accordion-collapse collapse"-->
-                                        <!--                                                     aria-labelledby="headingThree" data-bs-parent="#accordionExample">-->
-                                        <!--                                                    <div class="accordion-body">-->
-                                        <!--                                                        Content for the third accordion item. This is yet another piece-->
-                                        <!--                                                        of placeholder content for the accordion. You can use this space-->
-                                        <!--                                                        to describe your content.-->
-                                        <!--                                                    </div>-->
-                                        <!--                                                </div>-->
-                                        <!--                                            </div>-->
-                                        <!--                                        </div>-->
-                                        <!--                                        &lt;!&ndash; checklist accordion END&ndash;&gt;-->
-
-
                                     </div>
                                 </div>
                             </div>
@@ -1582,6 +1524,12 @@
         </div>
     </div>
 </div>
+
+<!-- modal container -->
+<div id="modal-container">
+
+</div>
+<!-- modal container -->
 
 <!-- general JS used over all tabs START -->
 <script src="assets/js/main.js"></script>
