--- a/test.html
+++ b/test.html
@@ -1,27 +1,5 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="utf-8">
-    <title>src - Digitaal publicatie platform</title>
-    <meta name="viewport" content="width=device-width,initial-scale=1">
-    <meta name="mobile-web-app-capable" content="yes">
-    <meta name="apple-mobile-web-app-capable" content="yes">
-    <link rel="apple-touch-icon" href="/assets/icons/apple-touch-icon.png">
-    <link rel="stylesheet" href="https://rsms.me/inter/inter.css">
-    <link rel="stylesheet" href="/assets/tailwind.min.css">
-    <link href="//cdn.quilljs.com/1.3.6/quill.snow.css" rel="stylesheet">
-    <link rel="manifest" href="/manifest.json">
-    <meta name="theme-color" content="#673ab8">
-    <link rel="shortcut icon" href="/favicon.ico">
-    <style></style>
-    <link href="/bundle.a2aae.css" rel="stylesheet" media="only x" onload="this.media='all'">
-    <noscript>
-        <link rel="stylesheet" href="/bundle.a2aae.css">
-    </noscript>
-</head>
-<body>
-<script crossorigin="anonymous" src="/bundle.023b3.esm.js" type="module"></script>
-<script nomodule="" src="/polyfills.4e1a3.js"></script>
-<script nomodule="" defer="defer" src="/bundle.afd31.js"></script>
-</body>
-</html>
+<!-- Bootstrap CSS -->
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+<!-- Bootstrap JS (Popper and Bootstrap JS) -->
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.min.js"></script>
+
