updated layout, updated cookie monitor

--- a/index.html
+++ b/index.html
@@ -848,10 +848,11 @@
                                         <table id="cookie-monitor-table"
                                                class="table table-responsive-sm table-hover table-striped">
                                             <thead>
-                                            <th>Action</th>
-                                            <th>Cookie</th>
-                                            <th>Path</th>
-                                            <th>Timestamp</th>
+                                            <th>Name</th>
+                                            <th>Value</th>
+                                            <th>timestamp</th>
+                                            <th>path</th>
+                                            <th>Details</th>
                                             </thead>
                                             <tbody id="cookie-monitor-table-table-body" data-control-update="true">
 
@@ -1519,13 +1520,13 @@
 
 <!-- modal container -->
 <div id="modal-container">
-
+<!-- reserved for modals e.g.: code modals etc.-->
 </div>
 <!-- modal container -->
 
 <!-- general JS used over all tabs START -->
-<script src="assets/js/main.js"></script>
 <script src="assets/js/extension-events.js"></script>
+<script src="assets/js/main.js"></script>
 <!-- general JS used over all tabs END -->
 
 <!-- tab specific script start -->
@@ -1534,6 +1535,7 @@
 <script src="assets/js/tabs/tab-1-general-tooling/tab-1-general-tooling.js"></script>
 <script src="assets/js/tabs/tab-2-enum-tooling/tab-2-enum-tooling.js"></script>
 <script src="assets/js/tabs/tab-3-exploit-assistant/tab-3-exploit-assistant.js"></script>
+<script src="assets/js/tabs/tab-4-shell-assistant/tab-4-shell-assistant.js"></script>
 <script src="assets/js/tabs/tab-4-shell-assistant/shells.js"></script>
 <script src="assets/js/tabs/tab-5-checklist-assistant/checklist-all.js"></script>
 <!-- TABS END -->
