finished cookie monitor, updated postmessage monitor

--- a/index.html
+++ b/index.html
@@ -555,7 +555,7 @@
                             <a class="nav-link" id="enum-tooling-message-listener-nav-item" data-bs-toggle="tab"
                                href="#enum-tooling-message-listener" role="tab">
                                 <img data-bs-toggle="tooltip"
-                                     data-bs-placement="right" title="Message listener"
+                                     data-bs-placement="right" title="Listener"
                                      src="assets/icons/navbar/tab-2-enum-tooling/message-listener.png"
                                      width="25px" height="25px">
                             </a>
@@ -829,7 +829,7 @@
                                         Cookie monitor:
                                         <br>
                                         <small>
-                                            <span class="current-tab-url"></span>
+                                            <span class="current-domain-url"></span>
                                         </small>
                                     </h6>
 
@@ -850,9 +850,14 @@
                                             <thead>
                                             <th>Name</th>
                                             <th>Value</th>
-                                            <th>timestamp</th>
-                                            <th>path</th>
-                                            <th>Details</th>
+                                            <th>Domain</th>
+                                            <th>Path</th>
+                                            <th>Httponly</th>
+                                            <th>Secure</th>
+                                            <th>Samesite</th>
+                                            <th>Cause</th>
+                                            <th>Removed</th>
+                                            <th>Timestamp</th>
                                             </thead>
                                             <tbody id="cookie-monitor-table-table-body" data-control-update="true">
 
