got an updated cookie monitor with values from the cookie API

--- a/index.html
+++ b/index.html
@@ -808,7 +808,7 @@
                                         </button>
                                     </div>
 
-                                    <div>
+                                    <div class="table-container">
                                         <table id="postmessage-monitor-table"
                                                class="table table-responsive-sm table-hover table-striped">
                                             <thead>
@@ -844,7 +844,7 @@
                                         </button>
                                     </div>
 
-                                    <div>
+                                    <div class="table-container">
                                         <table id="cookie-monitor-table"
                                                class="table table-responsive-sm table-hover table-striped">
                                             <thead>
@@ -1525,7 +1525,7 @@
 
 <!-- modal container -->
 <div id="modal-container">
-<!-- reserved for modals e.g.: code modals etc.-->
+    <!-- reserved for modals e.g.: code modals etc.-->
 </div>
 <!-- modal container -->
 
